added multiprocessing with both cores of google collab

--- a/feature_extractor_function.ipynb
+++ b/feature_extractor_function.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNXNBAOrrbebWblR0c9GngY",
+      "authorship_tag": "ABX9TyN2iq+cxVj77g6uiYhxI4tC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,29 +28,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "AVJSiaQ8m4g_",
-        "outputId": "2eec6dbc-89fc-43ac-8702-04e169fdbfda"
+        "outputId": "4c9f8f5d-f1dc-4978-f35b-d60a0a993fd5"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: tsfresh in /usr/local/lib/python3.11/dist-packages (0.21.0)\n",
+            "Collecting tsfresh\n",
+            "  Downloading tsfresh-0.21.0-py2.py3-none-any.whl.metadata (2.6 kB)\n",
             "Requirement already satisfied: requests>=2.9.1 in /usr/local/lib/python3.11/dist-packages (from tsfresh) (2.32.3)\n",
             "Requirement already satisfied: numpy>=1.15.1 in /usr/local/lib/python3.11/dist-packages (from tsfresh) (2.0.2)\n",
             "Requirement already satisfied: pandas>=0.25.0 in /usr/local/lib/python3.11/dist-packages (from tsfresh) (2.2.2)\n",
             "Requirement already satisfied: statsmodels>=0.13 in /usr/local/lib/python3.11/dist-packages (from tsfresh) (0.14.4)\n",
             "Requirement already satisfied: patsy>=0.4.1 in /usr/local/lib/python3.11/dist-packages (from tsfresh) (1.0.1)\n",
-            "Requirement already satisfied: pywavelets in /usr/local/lib/python3.11/dist-packages (from tsfresh) (1.8.0)\n",
+            "Collecting pywavelets (from tsfresh)\n",
+            "  Downloading pywavelets-1.8.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (9.0 kB)\n",
             "Requirement already satisfied: scikit-learn>=0.22.0 in /usr/local/lib/python3.11/dist-packages (from tsfresh) (1.6.1)\n",
             "Requirement already satisfied: tqdm>=4.10.0 in /usr/local/lib/python3.11/dist-packages (from tsfresh) (4.67.1)\n",
-            "Requirement already satisfied: stumpy>=1.7.2 in /usr/local/lib/python3.11/dist-packages (from tsfresh) (1.13.0)\n",
+            "Collecting stumpy>=1.7.2 (from tsfresh)\n",
+            "  Downloading stumpy-1.13.0-py3-none-any.whl.metadata (28 kB)\n",
             "Requirement already satisfied: cloudpickle in /usr/local/lib/python3.11/dist-packages (from tsfresh) (3.1.1)\n",
             "Requirement already satisfied: scipy>=1.14.0 in /usr/local/lib/python3.11/dist-packages (from tsfresh) (1.14.1)\n",
             "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.11/dist-packages (from pandas>=0.25.0->tsfresh) (2.8.2)\n",
@@ -65,7 +68,15 @@
             "Requirement already satisfied: packaging>=21.3 in /usr/local/lib/python3.11/dist-packages (from statsmodels>=0.13->tsfresh) (24.2)\n",
             "Requirement already satisfied: numba>=0.57.1 in /usr/local/lib/python3.11/dist-packages (from stumpy>=1.7.2->tsfresh) (0.60.0)\n",
             "Requirement already satisfied: llvmlite<0.44,>=0.43.0dev0 in /usr/local/lib/python3.11/dist-packages (from numba>=0.57.1->stumpy>=1.7.2->tsfresh) (0.43.0)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.8.2->pandas>=0.25.0->tsfresh) (1.17.0)\n"
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.8.2->pandas>=0.25.0->tsfresh) (1.17.0)\n",
+            "Downloading tsfresh-0.21.0-py2.py3-none-any.whl (96 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m96.0/96.0 kB\u001b[0m \u001b[31m5.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading stumpy-1.13.0-py3-none-any.whl (176 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m176.5/176.5 kB\u001b[0m \u001b[31m8.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading pywavelets-1.8.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (4.5 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.5/4.5 MB\u001b[0m \u001b[31m45.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: pywavelets, stumpy, tsfresh\n",
+            "Successfully installed pywavelets-1.8.0 stumpy-1.13.0 tsfresh-0.21.0\n"
           ]
         }
       ],
@@ -98,7 +109,7 @@
         "gauth = GoogleAuth()\n",
         "gauth.credentials = GoogleCredentials.get_application_default()\n",
         "drive = GoogleDrive(gauth)\n",
-        "folder_id = '1ps_Bh93KQRJ4WbnilORmKd1BaWUXtmt1' #100 files\n",
+        "folder_id = '1ps_Bh93KQRJ4WbnilORmKd1BaWUXtmt1' # files\n",
         "\n",
         "folder_list = drive.ListFile({'q': \"'{}' in parents and mimeType='application/vnd.google-apps.folder' and trashed=false\".format(folder_id)}).GetList()\n",
         "\n",
@@ -118,10 +129,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hAnBwrbYnDne",
-        "outputId": "c5d02ced-e81e-4a70-f269-7dbd38a3ca25"
+        "outputId": "30275876-c2d8-4793-9b95-4a939e34a232"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:root:pydrive is deprecated and no longer maintained. We recommend that you migrate your projects to pydrive2, the maintained fork of pydrive\n"
+          ]
+        },
         {
           "output_type": "stream",
           "name": "stdout",
@@ -135,7 +153,36 @@
             "Downloading 400hz-train-feature-50percent-10files.csv\n",
             "Downloading 400hz-train-target-50percent-10files.csv\n",
             "Downloading 400hz-test-target-50percent-10files.csv\n",
-            "Downloading 400hz-test-feature-20percent-1000files.csv\n"
+            "Downloading 400hz-test-feature-20percent-1000files.csv\n",
+            "Downloading 400hz-train-feature-20percent-1000files.csv\n",
+            "Downloading 400hz-test-target-20percent-1000files.csv\n",
+            "Downloading 400hz-train-target-20percent-1000files.csv\n",
+            "Processing folder: 100hz\n",
+            "Downloading 100hz-train-feature-50percent-100files.csv\n",
+            "Downloading 100hz-test-feature-50percent-100files.csv\n",
+            "Downloading 100hz-train-target-50percent-100files.csv\n",
+            "Downloading 100hz-test-target-50percent-100files.csv\n",
+            "Downloading 100hz-test-feature-50percent-10files.csv\n",
+            "Downloading 100hz-test-target-50percent-10files.csv\n",
+            "Downloading 100hz-train-feature-50percent-10files.csv\n",
+            "Downloading 100hz-train-target-50percent-10files.csv\n",
+            "Downloading 100hz-test-feature-20percent-1000files.csv\n",
+            "Downloading 100hz-train-feature-20percent-1000files.csv\n",
+            "Downloading 100hz-train-target-20percent-1000files.csv\n",
+            "Downloading 100hz-test-target-20percent-1000files.csv\n",
+            "Processing folder: 800hz\n",
+            "Downloading 800hz-test-feature-50percent-100files.csv\n",
+            "Downloading 800hz-train-feature-50percent-100files.csv\n",
+            "Downloading 800hz-train-target-50percent-100files.csv\n",
+            "Downloading 800hz-test-target-50percent-100files.csv\n",
+            "Downloading 800hz-test-feature-20percent-1000files.csv\n",
+            "Downloading 800hz-train-feature-20percent-1000files.csv\n",
+            "Downloading 800hz-train-target-20percent-1000files.csv\n",
+            "Downloading 800hz-test-target-20percent-1000files.csv\n",
+            "Downloading 800hz-test-feature-50percent-10files.csv\n",
+            "Downloading 800hz-train-feature-50percent-10files.csv\n",
+            "Downloading 800hz-train-target-50percent-10files.csv\n",
+            "Downloading 800hz-test-target-50percent-10files.csv\n"
           ]
         }
       ]
@@ -143,14 +190,14 @@
     {
       "cell_type": "code",
       "source": [
-        "hzs=[100, 400, 800]\n",
+        "hzs=[400]\n",
         "percents=[20, 50]\n",
-        "files_count=[10, 100, 1000]"
+        "files_count=[100]"
       ],
       "metadata": {
         "id": "Lhod2-sgnciF"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -164,7 +211,7 @@
       "metadata": {
         "id": "gYhYezrfBYDh"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -188,7 +235,7 @@
       "metadata": {
         "id": "tLv2ImBbm_YB"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -209,7 +256,8 @@
         "        train_feature,\n",
         "        column_id=\"fileno\",\n",
         "        column_sort=\"Uhrzeit\",\n",
-        "        impute_function=impute\n",
+        "        impute_function=impute,\n",
+        "        n_jobs=2\n",
         "    )\n",
         "\n",
         "    print(\"Extracting features from test part\")\n",
@@ -217,7 +265,8 @@
         "        test_feature,\n",
         "        column_id=\"fileno\",\n",
         "        column_sort=\"Uhrzeit\",\n",
-        "        impute_function=impute\n",
+        "        impute_function=impute,\n",
+        "        n_jobs=2\n",
         "    )\n",
         "\n",
         "    feature_file_train = f'extracted-{hz}hz-train-feature-{percent}percent-{file}files.csv'\n",
@@ -243,7 +292,73 @@
         "    # files.download(target_file_test)"
       ],
       "metadata": {
-        "id": "Z1lSNKTGneCy"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Z1lSNKTGneCy",
+        "outputId": "b3df83de-d72d-46d5-9345-7aed2a3819c7"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "working with -----  hz: 400, percent: 50, files: 100\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:tsfresh.feature_extraction.settings:Dependency not available for matrix_profile, this feature will be disabled!\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Extracting features from train part\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\rFeature Extraction:   0%|          | 0/10 [00:00<?, ?it/s]"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import multiprocessing\n",
+        "print(multiprocessing.cpu_count())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BdZF8vmZJpBi",
+        "outputId": "164017e0-00db-4fbc-f0a1-5df9b979849a"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "9jdQ0Va2p3eu"
       },
       "execution_count": null,
       "outputs": []
