--- a/feature_extractor_function.ipynb
+++ b/feature_extractor_function.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN2iq+cxVj77g6uiYhxI4tC",
+      "authorship_tag": "ABX9TyMwR1Q6HLNm5+MoXuyU3fEX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "AVJSiaQ8m4g_",
-        "outputId": "4c9f8f5d-f1dc-4978-f35b-d60a0a993fd5"
+        "outputId": "c8b23cb7-a60b-4e7c-95b5-55b51ab1d4ef"
       },
       "outputs": [
         {
@@ -70,11 +70,11 @@
             "Requirement already satisfied: llvmlite<0.44,>=0.43.0dev0 in /usr/local/lib/python3.11/dist-packages (from numba>=0.57.1->stumpy>=1.7.2->tsfresh) (0.43.0)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.8.2->pandas>=0.25.0->tsfresh) (1.17.0)\n",
             "Downloading tsfresh-0.21.0-py2.py3-none-any.whl (96 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m96.0/96.0 kB\u001b[0m \u001b[31m5.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m96.0/96.0 kB\u001b[0m \u001b[31m3.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading stumpy-1.13.0-py3-none-any.whl (176 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m176.5/176.5 kB\u001b[0m \u001b[31m8.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m176.5/176.5 kB\u001b[0m \u001b[31m11.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading pywavelets-1.8.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (4.5 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.5/4.5 MB\u001b[0m \u001b[31m45.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.5/4.5 MB\u001b[0m \u001b[31m33.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: pywavelets, stumpy, tsfresh\n",
             "Successfully installed pywavelets-1.8.0 stumpy-1.13.0 tsfresh-0.21.0\n"
           ]
@@ -129,9 +129,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hAnBwrbYnDne",
-        "outputId": "30275876-c2d8-4793-9b95-4a939e34a232"
+        "outputId": "a338c22a-d5d1-4682-d7ac-f28781ed5e78"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -153,36 +153,7 @@
             "Downloading 400hz-train-feature-50percent-10files.csv\n",
             "Downloading 400hz-train-target-50percent-10files.csv\n",
             "Downloading 400hz-test-target-50percent-10files.csv\n",
-            "Downloading 400hz-test-feature-20percent-1000files.csv\n",
-            "Downloading 400hz-train-feature-20percent-1000files.csv\n",
-            "Downloading 400hz-test-target-20percent-1000files.csv\n",
-            "Downloading 400hz-train-target-20percent-1000files.csv\n",
-            "Processing folder: 100hz\n",
-            "Downloading 100hz-train-feature-50percent-100files.csv\n",
-            "Downloading 100hz-test-feature-50percent-100files.csv\n",
-            "Downloading 100hz-train-target-50percent-100files.csv\n",
-            "Downloading 100hz-test-target-50percent-100files.csv\n",
-            "Downloading 100hz-test-feature-50percent-10files.csv\n",
-            "Downloading 100hz-test-target-50percent-10files.csv\n",
-            "Downloading 100hz-train-feature-50percent-10files.csv\n",
-            "Downloading 100hz-train-target-50percent-10files.csv\n",
-            "Downloading 100hz-test-feature-20percent-1000files.csv\n",
-            "Downloading 100hz-train-feature-20percent-1000files.csv\n",
-            "Downloading 100hz-train-target-20percent-1000files.csv\n",
-            "Downloading 100hz-test-target-20percent-1000files.csv\n",
-            "Processing folder: 800hz\n",
-            "Downloading 800hz-test-feature-50percent-100files.csv\n",
-            "Downloading 800hz-train-feature-50percent-100files.csv\n",
-            "Downloading 800hz-train-target-50percent-100files.csv\n",
-            "Downloading 800hz-test-target-50percent-100files.csv\n",
-            "Downloading 800hz-test-feature-20percent-1000files.csv\n",
-            "Downloading 800hz-train-feature-20percent-1000files.csv\n",
-            "Downloading 800hz-train-target-20percent-1000files.csv\n",
-            "Downloading 800hz-test-target-20percent-1000files.csv\n",
-            "Downloading 800hz-test-feature-50percent-10files.csv\n",
-            "Downloading 800hz-train-feature-50percent-10files.csv\n",
-            "Downloading 800hz-train-target-50percent-10files.csv\n",
-            "Downloading 800hz-test-target-50percent-10files.csv\n"
+            "Downloading 400hz-test-feature-20percent-1000files.csv\n"
           ]
         }
       ]
@@ -192,12 +163,12 @@
       "source": [
         "hzs=[400]\n",
         "percents=[20, 50]\n",
-        "files_count=[100]"
+        "files_count=[1000]"
       ],
       "metadata": {
         "id": "Lhod2-sgnciF"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -211,7 +182,7 @@
       "metadata": {
         "id": "gYhYezrfBYDh"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -235,7 +206,7 @@
       "metadata": {
         "id": "tLv2ImBbm_YB"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -257,7 +228,7 @@
         "        column_id=\"fileno\",\n",
         "        column_sort=\"Uhrzeit\",\n",
         "        impute_function=impute,\n",
-        "        n_jobs=2\n",
+        "        n_jobs=4\n",
         "    )\n",
         "\n",
         "    print(\"Extracting features from test part\")\n",
@@ -266,7 +237,6 @@
         "        column_id=\"fileno\",\n",
         "        column_sort=\"Uhrzeit\",\n",
         "        impute_function=impute,\n",
-        "        n_jobs=2\n",
         "    )\n",
         "\n",
         "    feature_file_train = f'extracted-{hz}hz-train-feature-{percent}percent-{file}files.csv'\n",
@@ -278,45 +248,43 @@
         "    file_downloader(target_file_train,train_target)\n",
         "    file_downloader(feature_file_test,extracted_features_test)\n",
         "    file_downloader(target_file_test,test_target)\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "    # extracted_features_train.to_csv(feature_file_train, sep=',')\n",
-        "    # train_target.to_csv(target_file_train, sep=',')\n",
-        "    # extracted_features_test.to_csv(feature_file_test, sep=',')\n",
-        "    # test_target.to_csv(target_file_test, sep=',')\n",
-        "    # files.download(feature_file_train)\n",
-        "    # files.download(target_file_train)\n",
-        "    # files.download(feature_file_test)\n",
-        "    # files.download(target_file_test)"
+        "\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Z1lSNKTGneCy",
-        "outputId": "b3df83de-d72d-46d5-9345-7aed2a3819c7"
+        "outputId": "589b93c1-10ff-488c-8e7c-235df7c7791d"
       },
       "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
+          "metadata": {
+            "tags": null
+          },
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "working with -----  hz: 400, percent: 50, files: 100\n"
+            "working with -----  hz: 400, percent: 20, files: 1000\n"
           ]
         },
         {
-          "output_type": "stream",
+          "metadata": {
+            "tags": null
+          },
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "WARNING:tsfresh.feature_extraction.settings:Dependency not available for matrix_profile, this feature will be disabled!\n"
           ]
         },
         {
-          "output_type": "stream",
+          "metadata": {
+            "tags": null
+          },
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Extracting features from train part\n"
           ]
@@ -325,7 +293,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "\rFeature Extraction:   0%|          | 0/10 [00:00<?, ?it/s]"
+            "Feature Extraction:  95%|█████████▌| 19/20 [11:42:12<32:06, 1926.16s/it]  "
           ]
         }
       ]
@@ -337,19 +305,19 @@
         "print(multiprocessing.cpu_count())"
       ],
       "metadata": {
+        "id": "BdZF8vmZJpBi",
+        "outputId": "2baf2c77-a800-430c-8797-92917afc98b7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "BdZF8vmZJpBi",
-        "outputId": "164017e0-00db-4fbc-f0a1-5df9b979849a"
+        }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2\n"
+            "8\n"
           ]
         }
       ]
